# textual-astview

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ChangeLog.md  LICENCE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml
textual_astview/: __init__.py  __main__.py
textual_astview/app/: __init__.py  astare.py
textual_astview/app/screens/: __init__.py  main.py
textual_astview/widgets/: __init__.py  astview.py  node_info.py  source.py  source_info.py
