[metadata]
name = textual-astview
description = An AST viewing widget library plus app, built for and with Textual.
version = attr: textual_astview.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-astview
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = terminal, library, widget, tool, ast, abstract syntax tree, viewer, explorer
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/textual-astview/blob/main/README.md
    Source = https://github.com/davep/textual-astview
    Issues = https://github.com/davep/textual-astview/issues
    Discussions = https://github.com/davep/textual-astview/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires = >=textual==0.26.0
python_requires = >=3.8

[options.package_data]
textual_astview = py.typed

[options.entry_points]
console_scripts =
    astare = textual_astview.app.astare:main

### setup.cfg ends here
